# applied-and-mathematical-statistics

./: .gitignore  Dockerfile  LICENSE  README.md  _config.yml  _toc.yml  applied-and-mathematical-statistics.code-workspace  environment.yml  pyproject.toml
.github/workflows/: jupyterbook.yml  render.yml  test.yml
notebooks/00_prerequisites/: 01_python_and_tools.ipynb  02_math_foundations.ipynb  03_statistical_glossary.ipynb  INSTALL.md
notebooks/01_probability_basics/: 01_sample_spaces.ipynb  02_combinatorics.ipynb  03_conditional_probability.ipynb  04_law_of_total_probability.ipynb  05_random_variables.ipynb  06_inequalities.ipynb
notebooks/02_distributions/: 01_discrete_distributions.ipynb  02_continuous_distributions.ipynb
notebooks/03_descriptive_stats/: 01_summary_statistics.ipynb  02_data_exploration.ipynb
notebooks/04_estimation/: 01_point_estimation.ipynb  02_method_of_moments.ipynb  03_maximum_likelihood.ipynb  04_confidence_intervals.ipynb
notebooks/05_hypothesis_testing/: 01_hypothesis_framework.ipynb  02_common_tests.ipynb  04_multiple_testing.ipynb  05_roc_curves.ipynb
notebooks/06_linear_models/: 01_simple_linear_regression.ipynb  02_multiple_regression.ipynb  03_diagnostics.ipynb  04_anova.ipynb  05_model_selection.ipynb
notebooks/07_bayesian_inference/: 03_grid_and_quadratic_approximation.ipynb  05_mcmc_diagnostics.ipynb
notebooks/08_bayesian_regression/: 01_bayesian_linear_regression.ipynb  02_bayesian_logistic_regression.ipynb  (+1 more)
scripts/: create_notebooks.py  tag_hide_input.py  update_links.py
tests/: test_amstats.py
(+19 files in other folders)
