[build-system]
requires = ["setuptools>=68", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "amstats"
version = "0.1.0"
description = "Applied and Mathematical Statistics — course utilities and Manim helpers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Alexander Timmer"},
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12,<2",
    "matplotlib>=3.8,<4",
    "manim>=0.18,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "nbval>=0.11",
    "papermill>=2.5",
    "ruff>=0.3",
    "jupyter-book>=1.0,<2",
    "nbconvert>=7.14,<8",
]
cheminformatics = [
    "rdkit>=2024.03",
]
bayesian = [
    "pymc>=5.10,<6",
    "arviz>=0.17,<1",
    "cmdstanpy>=1.2,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
